spacing fix on code submit, messge changes

--- a/resources/assets/sass/main-page.scss
+++ b/resources/assets/sass/main-page.scss
@@ -55,6 +55,11 @@ img.content-image
   }
 }
 
+.form-group
+{
+  text-align: left;
+}
+
 #main-page-splash
 {
   padding: 50px;
