--- a/resources/assets/sass/rsvp.scss
+++ b/resources/assets/sass/rsvp.scss
@@ -354,6 +354,13 @@ $trees: url('/img/tree_bark.jpg');
     }
   }
 
+  .post-rsvp-message
+  {
+    .highway-subhead {
+      margin-bottom: 20px;
+    }
+  }
+
   #lodging-info-form, #lodging-selection-form {
     width: 80%;
 
